--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ input.hoursInput {
     <option value="">Sélectionnez Equipe</option>
 </select>
 
-<p class="summary"><span id="selectedCount">0</span> Ouvriers<button onclick="OPED()">Envoyer</button> <button onclick="toggleSelectAll()"> tout</button><a href="https://abdermb98.github.io/sanap/">
+<p class="summary"><span id="selectedCount">0</span> Ouvriers<button onclick="OPED()">Envoyer</button> <button onclick="toggleSelectAll()"> tout</button><a href="https://aroma-rh.github.io/F20POINTAGE/">
     <button class="plus-button" >P</button>
 </a></p>
 
@@ -482,7 +482,7 @@ function openModal() {
         finca: finca
     };
 
-    fetch("https://script.google.com/macros/s/AKfycbzHpQeiuAeeqN7tJm3lRdKTbu7S4mxhNNwszfLv1y-W9XwKyARVyFCS0PGgwmmrtS3O/exec", {
+    fetch("https://script.google.com/macros/s/AKfycbxGnQNRwTDeYJXXN79hdyEmBLZJ1AEYgQblXp426ethL8L5lE0YUSpH6SW7OxnmBDG7/exec", {
     method: "POST",
     mode: "no-cors",
     headers: { "Content-Type": "application/json" },
@@ -515,7 +515,7 @@ function toggleSelectAll() {
 }
 
 async function fetchGroups() {
-    const url = "https://script.google.com/macros/s/AKfycbzHpQeiuAeeqN7tJm3lRdKTbu7S4mxhNNwszfLv1y-W9XwKyARVyFCS0PGgwmmrtS3O/exec";
+    const url = "https://script.google.com/macros/s/AKfycbxGnQNRwTDeYJXXN79hdyEmBLZJ1AEYgQblXp426ethL8L5lE0YUSpH6SW7OxnmBDG7/exec";
     try {
         const response = await fetch(url);
         const data = await response.json();
@@ -604,10 +604,10 @@ function updateRowSelection(row, selected) {
     const codeValue = codeCell.textContent.trim(); 
 
     // VARIABLE S7AB SWAYE3
-    const h12 = ["13000000000524" ];
-    const h9 = ["740000016"];
-    const h10 = ["400236"];
-      const fix = ["569000", "1000829"];
+    const h12 = ["13524", "456", "1648" ,"4029" ];
+    const h9 = ["7416", "12419", "19939", "26730", "27399", "30609", "37079", "40183", "38774", "41294", "44943", "28679", "58451","34372"];
+    const h10 = ["4236", "7694", "13536", "15062","23825", "28541", "29730", "45894", "48337", "41371"];
+      const fix = ["69", "1829", "4263", "12488", "14829", "21477", "27496", "28055", "57281", "52206", "32781", "33567", "36435", "36688", "40182", "42195", "21995", "4954", "43861", "27495", "57743", "27893", "3655", "3216", "6035", "4935", "57843", "23133","24375","22423","58806","31445","55902","37541","46467"];
     if (selected) {
         row.classList.add("selected");
 
@@ -622,7 +622,7 @@ function updateRowSelection(row, selected) {
         }else if (fix.includes(codeValue)) {
             hoursInput.value = 8;
         } else if (hoursInput.value == 0) {
-            hoursInput.value = 7;
+            hoursInput.value = 8;
         }
     } else {
         row.classList.remove("selected");
@@ -673,7 +673,7 @@ function closeConfirmationModal() {
                 return;
             }
 
-            const url = "https://script.google.com/macros/s/AKfycbzHpQeiuAeeqN7tJm3lRdKTbu7S4mxhNNwszfLv1y-W9XwKyARVyFCS0PGgwmmrtS3O/exec";
+            const url = "https://script.google.com/macros/s/AKfycbxGnQNRwTDeYJXXN79hdyEmBLZJ1AEYgQblXp426ethL8L5lE0YUSpH6SW7OxnmBDG7/exec";
             try {
                 const response = await fetch(url, {
                     method: "POST",
