--- a/index.html
+++ b/index.html
@@ -395,7 +395,8 @@ input.hoursInput {
 </select>
 
 <p class="summary"><span id="selectedCount">0</span> Ouvriers<button onclick="OPED()">Envoyer</button> <button onclick="toggleSelectAll()"> tout</button><a href="https://aroma-rh.github.io/F20POINTAGE/">
-    <button class="plus-button" >P</button>
+    <button class="plus-button" >P</button><a href="https://abdermb98.github.io/finca20/">
+    <button class="plus-button" >DP</button>
 </a></p>
 
 <table>
