--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ input.hoursInput {
     <option value="">Sélectionnez Equipe</option>
 </select>
 
-<p class="summary"><span id="selectedCount">0</span> Ouvriers<button onclick="OPED()">Envoyer</button> <button onclick="toggleSelectAll()"> tout</button><a href="https://aroma-rh.github.io/F20POINTAGE/">
+<p class="summary"><span id="selectedCount">0</span> Ouvriers<button onclick="OPED()">Envoyer</button> <button onclick="toggleSelectAll()"> tout</button><a href="https://abdermb98.github.io/sanap/">
     <button class="plus-button" >P</button><a href="https://abdermb98.github.io/finca20/">
     <button class="plus-button" >DP</button>
 </a></p>
