--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ function openModal() {
         finca: finca
     };
 
-    fetch("https://script.google.com/macros/s/AKfycbzDykGEpHPH40dqMf7ERYPRQkHZMXpjCeXBmOAetoOifx3jlq55EREqIqbSgYOEo3YO/exec", {
+    fetch("https://script.google.com/macros/s/AKfycbz0zdA6fKWBJcSlWrTq2HPlTFtAlWv_UL2px0WLe4bQybOMhc-k1WI4-2rvoTOJhD27/exec", {
     method: "POST",
     mode: "no-cors",
     headers: { "Content-Type": "application/json" },
@@ -516,7 +516,7 @@ function toggleSelectAll() {
 }
 
 async function fetchGroups() {
-    const url = "https://script.google.com/macros/s/AKfycbzDykGEpHPH40dqMf7ERYPRQkHZMXpjCeXBmOAetoOifx3jlq55EREqIqbSgYOEo3YO/exec";
+    const url = "https://script.google.com/macros/s/AKfycbz0zdA6fKWBJcSlWrTq2HPlTFtAlWv_UL2px0WLe4bQybOMhc-k1WI4-2rvoTOJhD27/exec";
     try {
         const response = await fetch(url);
         const data = await response.json();
@@ -605,15 +605,15 @@ function updateRowSelection(row, selected) {
     const codeValue = codeCell.textContent.trim(); 
 
     // VARIABLE S7AB SWAYE3
-    const h12 = ["13524", "456", "1648" ,"4029" ];
-    const h9 = ["7416", "12419", "19939", "26730", "27399", "30609", "37079", "40183", "38774", "41294", "44943", "28679", "58451","34372"];
-    const h10 = ["4236", "7694", "13536", "15062","23825", "28541", "29730", "45894", "48337", "41371"];
-      const fix = ["69", "1829", "4263", "12488", "14829", "21477", "27496", "28055", "57281", "52206", "32781", "33567", "36435", "36688", "40182", "42195", "21995", "4954", "43861", "27495", "57743", "27893", "3655", "3216", "6035", "4935", "57843", "23133","24375","22423","58806","31445","55902","37541","46467"];
+    const h12 = ["16025", "12273", "14471" ,"402000009" ];
+    const h9 = ["7411116"];
+    const h10 = ["4211111136"];
+      const fix = ["7415", "1111111", "4263"];
     if (selected) {
         row.classList.add("selected");
 
         if (h12.includes(codeValue)) {
-            hoursInput.value = 12;
+            hoursInput.value = 11;
             
         }
         else if (h9.includes(codeValue)) {
@@ -623,7 +623,7 @@ function updateRowSelection(row, selected) {
         }else if (fix.includes(codeValue)) {
             hoursInput.value = 8;
         } else if (hoursInput.value == 0) {
-            hoursInput.value = 8;
+            hoursInput.value = 7;
         }
     } else {
         row.classList.remove("selected");
@@ -674,7 +674,7 @@ function closeConfirmationModal() {
                 return;
             }
 
-            const url = "https://script.google.com/macros/s/AKfycbzDykGEpHPH40dqMf7ERYPRQkHZMXpjCeXBmOAetoOifx3jlq55EREqIqbSgYOEo3YO/exec";
+            const url = "https://script.google.com/macros/s/AKfycbz0zdA6fKWBJcSlWrTq2HPlTFtAlWv_UL2px0WLe4bQybOMhc-k1WI4-2rvoTOJhD27/exec";
             try {
                 const response = await fetch(url, {
                     method: "POST",
